--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-    <script src="rectangle.js"></script>
-    <script src="bullet.js"></script>
+    <script src="tank.js"></script>
+    <script src="wall.js"></script>
   
 
 </body></html>
