--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="p5.collide2d.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
+    <script src="predator.js"></script>
+    <script src="prey.js"></script>
     <script src="sketch.js"></script>
-    <script src="rectangle.js"></script>
-    <script src="bullet.js"></script>
   
 
 </body></html>
